Fix not wrapping simulation values

--- a/assets/stylesheets/visualizer.sass
+++ b/assets/stylesheets/visualizer.sass
@@ -21,7 +21,7 @@
   padding-bottom: 5px
 
 .rootDescriptionContainer
-  width: 70%
+  width: 60%
   display: inline-flex
   align-items: center
 
@@ -42,6 +42,8 @@
   max-width: 30%
   min-height: 30px
   float: right
+  white-space: nowrap
+  margin-right: 10px
 
 .simulationTimeWrapper
   display: inline-block
